argocd/base/app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: magnezoo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: magnezoo
  template:
    metadata:
      labels:
        app: magnezoo
    spec:
      containers:
        - name: magnezoo
          image: registry.uniproject.jp/nnn/magnezoo:0.2.0
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: app-image-storage
              mountPath: /app/public/img/posts
          readinessProbe:
            httpGet:
              path: /
              port: 3000
      imagePullSecrets:
        - name: internal-harbor
      volumes:
        - name: app-image-storage
          persistentVolumeClaim:
            claimName: app-image-pvc
