argocd/base/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: magnezoo
spec:
  selector:
    app: magnezoo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
