argocd/base/app-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: magnezoo
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - kind: Rule
      match: Host(`magnezoo.unipro-n.com`) && PathPrefix(`/`)
      observability:
        accessLogs: true
        metrics: true
        tracing: true
      priority: 10
      services:
        - kind: Service
          name: magnezoo
          passHostHeader: true
          port: 80
          responseForwarding:
            flushInterval: 1ms
          scheme: http
          sticky:
            cookie:
              httpOnly: true
              name: cookie
              secure: true
          strategy: wrr
          weight: 10
  tls:
    certResolver: cf-prod
    domains:
      - main: magnezoo.unipro-n.com
